add  security service to get the authenticated user id